--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,11 @@
         "infyomlabs/laravel-generator": "*",
         "infyomlabs/swagger-generator": "dev-master",
         "intervention/image": "^2.4 ",
+        "ixudra/curl": "^6.16",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.5",
+        "php-curl-class/php-curl-class": "^8.1",
         "sofa/eloquence": "^5.5",
         "spatie/laravel-activitylog": "^2.1",
         "spatie/laravel-analytics": "^3.3",
