將bower.json 內jasny-bootstrap的版本號固定為3.1.3,因新版本結構不同,會導致專案發生錯誤,故將版本固定

--- a/bower.json
+++ b/bower.json
@@ -64,7 +64,7 @@
     "intl-tel-input": "~7.1.1",
     "ion.rangeslider": "~2.1.2",
     "ionicons": "~2.0.0",
-    "jasny-bootstrap": "~3.2.0-beta.1",
+    "jasny-bootstrap": "3.1.3",
     "blueimp-file-upload": "~9.11.2",
     "jscharts": "https://github.com/carlcraig/tc-angular-chartjs.git",
     "bower-jvectormap": "~1.2.2",
@@ -113,19 +113,19 @@
     "wow": "~1.1.0",
     "ModalWindowEffects": "*",
     "html.sortable": "^0.3.1",
-    "selectize":"~0.12.1",
-    "awesome-bootstrap-checkbox":"~0.3.7",
-    "air-datepicker" : "~2.0.2",
-    "dropify-fileupload" : "https://github.com/JeremyFagis/dropify.git",
-    "starability":"~1.0.1-rc.1",
+    "selectize": "~0.12.1",
+    "awesome-bootstrap-checkbox": "~0.3.7",
+    "air-datepicker": "~2.0.2",
+    "dropify-fileupload": "https://github.com/JeremyFagis/dropify.git",
+    "starability": "~1.0.1-rc.1",
     "bootstrap-star-rating": "4.0.1",
-    "flatpickr-calendar" : "v1.8.4",
-    "pickadate" : "3.5.6",
-    "sweetalert" : "~1.1.1",
+    "flatpickr-calendar": "v1.8.4",
+    "pickadate": "3.5.6",
+    "sweetalert": "~1.1.1",
     "jstree": "~3.3.1",
     "c3": "~0.4.11-rc4",
     "morris.js": "~0.5.1",
-    "d3pie" : "~0.1.8",
+    "d3pie": "~0.1.8",
     "hover": "~2.0.2",
     "jeditable": "https://github.com/tuupola/jquery_jeditable.git",
     "bootstrap-treeview": "~1.2.0",
