注單查詢-版面調整[3rdpay/ThirdPay-Issues#5] (#17)
* 訂單查詢增加以下搜尋條件:
* 支付方式
* 關鍵字(系統交易號)
* 現在沒有選擇商戶的權限時不能查詢到他人商戶的資料
* code format

* 帳號銀行卡綁定數量變更由10改為20

* 訂單查詢[3rdpay/ThirdPay#5]

* 訂單查詢樣式調整，日期下拉亂碼修正[3rdpay/ThirdPay#5]

* 增加刷新按鈕，修正一般用戶報錯問題[3rdpay/ThirdPay#5]

* payment_type 預設值變更為0

* 修正時間顯示問題[3rdpay/ThirdPay#5]

* 修正搜索問題[3rdpay/ThirdPay#5]

* 修正數字顯示方式[3rdpay/ThirdPay#5]

* Delete .phpstorm.meta.php

這開發用的laravel 輔助php檔案
不需要上傳至git

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
+    "/assets/js/report.js": "/assets/js/report.js",
+    "/assets/js/OrderSearch.js": "/assets/js/OrderSearch.js",
     "/assets/vendors/simple-line-icons/css/simple-line-icons.css": "/assets/vendors/simple-line-icons/css/simple-line-icons.css",
     "/assets/vendors/ionicons/css/ionicons.min.css": "/assets/vendors/ionicons/css/ionicons.min.css",
     "/assets/css/fonts.css": "/assets/css/fonts.css",
@@ -439,6 +441,7 @@
     "/assets/js/pages/minisidebar.js": "/assets/js/pages/minisidebar.js",
     "/assets/css/pages/minisidebar.css": "/assets/css/pages/minisidebar.css",
     "/assets/css/pages/fixedmenu.css": "/assets/css/pages/fixedmenu.css",
+    "/assets/css/style.css": "/assets/css/style.css",
     "/assets/css/app.css": "/assets/css/app.css",
     "/assets/css/app_white.css": "/assets/css/app_white.css",
     "/assets/css/lib.css": "/assets/css/lib.css",
