報表統計-新增功能 #9

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/assets/js/reportStat.js": "/assets/js/reportStat.js",
     "/assets/js/report.js": "/assets/js/report.js",
     "/assets/js/OrderSearch.js": "/assets/js/OrderSearch.js",
     "/assets/vendors/simple-line-icons/css/simple-line-icons.css": "/assets/vendors/simple-line-icons/css/simple-line-icons.css",
