--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-resource": "^1.5.1"
   },
   "dependencies": {
-    "node-sass": "^4.5.3"
+    "node-sass": "^4.5.3",
+    "vue-loading-overlay": "^3.0.1"
   }
 }
