報表統計-新增功能[3rdpay/ThirdPay-Issues#9] (#18)
* 增加輸入參數檢查機制與資料查詢語法[3rdpay/ThirdPay-Issue#9]

* 移除多餘的參數檢查規則[3rdpay/ThirdPay-Issue#9]

* 移除不必要的資訊[3rdpay/ThirdPay-Issue#9]

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/assets/js/OrderSearch.js": "/assets/js/OrderSearch.js",
+    "/assets/js/reportStat.js": "/assets/js/reportStat.js",
     "/assets/js/report.js": "/assets/js/report.js",
     "/assets/vendors/simple-line-icons/css/simple-line-icons.css": "/assets/vendors/simple-line-icons/css/simple-line-icons.css",
     "/assets/vendors/ionicons/css/ionicons.min.css": "/assets/vendors/ionicons/css/ionicons.min.css",
