--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -22,17 +22,12 @@
     "/assets/vendors/flatpickrCalendar/js/flatpickr.min.js": "/assets/vendors/flatpickrCalendar/js/flatpickr.min.js",
     "/assets/js/pages/custom_datepicker.js": "/assets/js/pages/custom_datepicker.js",
     "/assets/vendors/awesomeBootstrapCheckbox/awesome-bootstrap-checkbox.css": "/assets/vendors/awesomeBootstrapCheckbox/awesome-bootstrap-checkbox.css",
-    "/assets/vendors/tinymce/tinymce.min.js": "/assets/vendors/tinymce/tinymce.min.js",
     "/assets/vendors/bootstrapRating/css/star-rating.min.css": "/assets/vendors/bootstrapRating/css/star-rating.min.css",
     "/assets/vendors/bootstrapRating/js/star-rating.min.js": "/assets/vendors/bootstrapRating/js/star-rating.min.js",
     "/assets/js/metisMenu.js": "/assets/js/metisMenu.js",
     "/assets/css/pages/custom_gui_builder.css": "/assets/css/pages/custom_gui_builder.css",
     "/assets/css/pages/formbuilder.css": "/assets/css/pages/formbuilder.css",
     "/assets/css/pages/adv_date_pickers.css": "/assets/css/pages/adv_date_pickers.css",
-    "/assets/vendors/form-builder/js/beautify-html.js": "/assets/vendors/form-builder/js/beautify-html.js",
-    "/assets/vendors/form-builder/js/beautify-css.js": "/assets/vendors/form-builder/js/beautify-css.js",
-    "/assets/vendors/form-builder/js/beautify.js": "/assets/vendors/form-builder/js/beautify.js",
-    "/assets/vendors/backbone/js/backbone-min.js": "/assets/vendors/backbone/js/backbone-min.js",
     "/assets/vendors/dropzone/css/dropzone.css": "/assets/vendors/dropzone/css/dropzone.css",
     "/assets/vendors/dropzone/js/dropzone.js": "/assets/vendors/dropzone/js/dropzone.js",
     "/assets/js/pages/form_examples.js": "/assets/js/pages/form_examples.js",
@@ -58,7 +53,6 @@
     "/assets/vendors/blueimp-gallery-with-desc/css/blueimp-gallery.min.css": "/assets/vendors/blueimp-gallery-with-desc/css/blueimp-gallery.min.css",
     "/assets/vendors/blueimp-gallery-with-desc/js/jquery.blueimp-gallery.min.js": "/assets/vendors/blueimp-gallery-with-desc/js/jquery.blueimp-gallery.min.js",
     "/assets/js/pages/main.js": "/assets/js/pages/main.js",
-    "/assets/vendors/fancybox/jquery.mousewheel.pack.js": "/assets/vendors/fancybox/jquery.mousewheel.pack.js",
     "/assets/vendors/gridmanager/css/jquery.gridmanager.css": "/assets/vendors/gridmanager/css/jquery.gridmanager.css",
     "/assets/vendors/gridmanager/css/demo.css": "/assets/vendors/gridmanager/css/demo.css",
     "/assets/vendors/gridmanager/js/jquery.gridmanager.js": "/assets/vendors/gridmanager/js/jquery.gridmanager.js",
@@ -67,19 +61,11 @@
     "/assets/vendors/bootstrap3-wysihtml5-bower/css/bootstrap3-wysihtml5.min.css": "/assets/vendors/bootstrap3-wysihtml5-bower/css/bootstrap3-wysihtml5.min.css",
     "/assets/vendors/bootstrap3-wysihtml5-bower/js/bootstrap3-wysihtml5.all.min.js": "/assets/vendors/bootstrap3-wysihtml5-bower/js/bootstrap3-wysihtml5.all.min.js",
     "/assets/vendors/bootstrap3-wysihtml5-bower/js/bootstrap3-wysihtml5.min.js": "/assets/vendors/bootstrap3-wysihtml5-bower/js/bootstrap3-wysihtml5.min.js",
-    "/assets/vendors/summernote/summernote.css": "/assets/vendors/summernote/summernote.css",
-    "/assets/vendors/summernote/summernote.min.js": "/assets/vendors/summernote/summernote.min.js",
-    "/assets/vendors/ckeditor/js/ckeditor.js": "/assets/vendors/ckeditor/js/ckeditor.js",
-    "/assets/vendors/ckeditor/js/jquery.js": "/assets/vendors/ckeditor/js/jquery.js",
-    "/assets/vendors/ckeditor/js/config.js": "/assets/vendors/ckeditor/js/config.js",
-    "/assets/vendors/ckeditor/js/styles.js": "/assets/vendors/ckeditor/js/styles.js",
-    "/assets/vendors/ckeditor/js/contents.css": "/assets/vendors/ckeditor/js/contents.css",
     "/assets/vendors/starability/starability-all.css": "/assets/vendors/starability/starability-all.css",
     "/assets/vendors/bootstrapStarRating/css/star-rating.min.css": "/assets/vendors/bootstrapStarRating/css/star-rating.min.css",
     "/assets/vendors/bootstrapStarRating/js/star-rating.min.js": "/assets/vendors/bootstrapStarRating/js/star-rating.min.js",
     "/assets/js/pages/custom_rating.js": "/assets/js/pages/custom_rating.js",
     "/assets/css/pages/custom_rating.css": "/assets/css/pages/custom_rating.css",
-    "/assets/vendors/autogrow/js/jQuery-autogrow.min.js": "/assets/vendors/autogrow/js/jQuery-autogrow.min.js",
     "/assets/vendors/trumbowyg/css/trumbowyg.min.css": "/assets/vendors/trumbowyg/css/trumbowyg.min.css",
     "/assets/vendors/trumbowyg/css/trumbowyg.colors.min.css": "/assets/vendors/trumbowyg/css/trumbowyg.colors.min.css",
     "/assets/vendors/trumbowyg/js/trumbowyg.js": "/assets/vendors/trumbowyg/js/trumbowyg.js",
@@ -102,7 +88,6 @@
     "/assets/vendors/bower-jquery-easyPieChart/js/easypiechart.min.js": "/assets/vendors/bower-jquery-easyPieChart/js/easypiechart.min.js",
     "/assets/vendors/bower-jquery-easyPieChart/js/jquery.easingpie.js": "/assets/vendors/bower-jquery-easyPieChart/js/jquery.easingpie.js",
     "/assets/vendors/moment/js/moment.min.js": "/assets/vendors/moment/js/moment.min.js",
-    "/assets/vendors/underscore/js/underscore-min.js": "/assets/vendors/underscore/js/underscore-min.js",
     "/assets/js/pages/datepicker.js": "/assets/js/pages/datepicker.js",
     "/assets/vendors/datetimepicker/css/bootstrap-datetimepicker.min.css": "/assets/vendors/datetimepicker/css/bootstrap-datetimepicker.min.css",
     "/assets/vendors/datetimepicker/js/bootstrap-datetimepicker.min.js": "/assets/vendors/datetimepicker/js/bootstrap-datetimepicker.min.js",
@@ -113,10 +98,6 @@
     "/assets/vendors/Buttons/js/buttons.js": "/assets/vendors/Buttons/js/buttons.js",
     "/assets/vendors/colorpicker/css/bootstrap-colorpicker.min.css": "/assets/vendors/colorpicker/css/bootstrap-colorpicker.min.css",
     "/assets/vendors/colorpicker/js/bootstrap-colorpicker.min.js": "/assets/vendors/colorpicker/js/bootstrap-colorpicker.min.js",
-    "/assets/vendors/owl_carousel/css/owl.carousel.css": "/assets/vendors/owl_carousel/css/owl.carousel.css",
-    "/assets/vendors/owl_carousel/css/owl.theme.css": "/assets/vendors/owl_carousel/css/owl.theme.css",
-    "/assets/vendors/owl_carousel/css/owl.transitions.css": "/assets/vendors/owl_carousel/css/owl.transitions.css",
-    "/assets/vendors/owl_carousel/js/owl.carousel.min.js": "/assets/vendors/owl_carousel/js/owl.carousel.min.js",
     "/assets/css/pages/advmodals.css": "/assets/css/pages/advmodals.css",
     "/assets/vendors/bootstrap-tagsinput/css/bootstrap-tagsinput.css": "/assets/vendors/bootstrap-tagsinput/css/bootstrap-tagsinput.css",
     "/assets/vendors/bootstrap-tagsinput/css/app.css": "/assets/vendors/bootstrap-tagsinput/css/app.css",
@@ -174,26 +155,12 @@
     "/assets/vendors/datatables/css/scroller.bootstrap.css": "/assets/vendors/datatables/css/scroller.bootstrap.css",
     "/assets/vendors/datatables/js/pdfmake.js": "/assets/vendors/datatables/js/pdfmake.js",
     "/assets/vendors/datatables/js/vfs_fonts.js": "/assets/vendors/datatables/js/vfs_fonts.js",
-    "/assets/vendors/jeditable/js/jquery.jeditable.js": "/assets/vendors/jeditable/js/jquery.jeditable.js",
     "/assets/js/pages/table-advanced.js": "/assets/js/pages/table-advanced.js",
     "/assets/css/pages/tables.css": "/assets/css/pages/tables.css",
     "/assets/js/pages/table-advanced2.js": "/assets/js/pages/table-advanced2.js",
     "/assets/js/pages/table-editable.js": "/assets/js/pages/table-editable.js",
     "/assets/js/pages/data.txt": "/assets/js/pages/data.txt",
     "/assets/js/pages/table-responsive.js": "/assets/js/pages/table-responsive.js",
-    "/assets/vendors/flotchart/js/jquery.flot.js": "/assets/vendors/flotchart/js/jquery.flot.js",
-    "/assets/vendors/flotchart/js/jquery.flot.stack.js": "/assets/vendors/flotchart/js/jquery.flot.stack.js",
-    "/assets/vendors/flotchart/js/jquery.flot.crosshair.js": "/assets/vendors/flotchart/js/jquery.flot.crosshair.js",
-    "/assets/vendors/flotchart/js/jquery.flot.time.js": "/assets/vendors/flotchart/js/jquery.flot.time.js",
-    "/assets/vendors/flotchart/js/jquery.flot.selection.js": "/assets/vendors/flotchart/js/jquery.flot.selection.js",
-    "/assets/vendors/flotchart/js/jquery.flot.symbol.js": "/assets/vendors/flotchart/js/jquery.flot.symbol.js",
-    "/assets/vendors/flotchart/js/jquery.flot.resize.js": "/assets/vendors/flotchart/js/jquery.flot.resize.js",
-    "/assets/vendors/flotchart/js/jquery.flot.categories.js": "/assets/vendors/flotchart/js/jquery.flot.categories.js",
-    "/assets/vendors/flotchart/js/jquery.flot.pie.js": "/assets/vendors/flotchart/js/jquery.flot.pie.js",
-    "/assets/vendors/flot_tooltip/js/jquery.flot.tooltip.js": "/assets/vendors/flot_tooltip/js/jquery.flot.tooltip.js",
-    "/assets/css/pages/flot.css": "/assets/css/pages/flot.css",
-    "/assets/js/pages/customcharts.js": "/assets/js/pages/customcharts.js",
-    "/assets/vendors/animatechart/jquery.flot.animator.js": "/assets/vendors/animatechart/jquery.flot.animator.js",
     "/assets/vendors/Chartjs/js/Chart.js": "/assets/vendors/Chartjs/js/Chart.js",
     "/assets/vendors/fullcalendar/css/fullcalendar.css": "/assets/vendors/fullcalendar/css/fullcalendar.css",
     "/assets/vendors/fullcalendar/css/fullcalendar.print.css": "/assets/vendors/fullcalendar/css/fullcalendar.print.css",
@@ -226,8 +193,6 @@
     "/assets/vendors/jqvmap/js/jquery.vmap.germany.js": "/assets/vendors/jqvmap/js/jquery.vmap.germany.js",
     "/assets/vendors/jqvmap/js/jquery.vmap.russia.js": "/assets/vendors/jqvmap/js/jquery.vmap.russia.js",
     "/assets/vendors/jqvmap/js/jquery.vmap.sampledata.js": "/assets/vendors/jqvmap/js/jquery.vmap.sampledata.js",
-    "/assets/vendors/fort_js/css/fort.css": "/assets/vendors/fort_js/css/fort.css",
-    "/assets/vendors/fort_js/js/fort.js": "/assets/vendors/fort_js/js/fort.js",
     "/assets/vendors/c3/c3.min.css": "/assets/vendors/c3/c3.min.css",
     "/assets/vendors/c3/c3.min.js": "/assets/vendors/c3/c3.min.js",
     "/assets/vendors/d3/d3.min.js": "/assets/vendors/d3/d3.min.js",
@@ -272,16 +237,8 @@
     "/assets/js/pages/calendar.js": "/assets/js/pages/calendar.js",
     "/assets/css/pages/piecharts.css": "/assets/css/pages/piecharts.css",
     "/assets/js/pages/custompiecharts.js": "/assets/js/pages/custompiecharts.js",
-    "/assets/css/pages/charts.css": "/assets/css/pages/charts.css",
-    "/assets/vendors/animationcharts/jquery.circliful.css": "/assets/vendors/animationcharts/jquery.circliful.css",
-    "/assets/vendors/animationcharts/jquery.circliful.min.js": "/assets/vendors/animationcharts/jquery.circliful.min.js",
-    "/assets/js/pages/animation-chart.js": "/assets/js/pages/animation-chart.js",
     "/assets/css/pages/jscharts.css": "/assets/css/pages/jscharts.css",
     "/assets/js/pages/chartjs.js": "/assets/js/pages/chartjs.js",
-    "/assets/css/pages/sparklinecharts.css": "/assets/css/pages/sparklinecharts.css",
-    "/assets/js/pages/sparkline.js": "/assets/js/pages/sparkline.js",
-    "/assets/vendors/sparklinecharts/jquery.sparkline.js": "/assets/vendors/sparklinecharts/jquery.sparkline.js",
-    "/assets/vendors/splinecharts/jquery.flot.spline.js": "/assets/vendors/splinecharts/jquery.flot.spline.js",
     "/assets/js/pages/knob_page.js": "/assets/js/pages/knob_page.js",
     "/assets/css/pages/ion.css": "/assets/css/pages/ion.css",
     "/assets/js/pages/sliders.js": "/assets/js/pages/sliders.js",
@@ -346,19 +303,11 @@
     "/assets/js/pages/scripts.min.js": "/assets/js/pages/scripts.min.js",
     "/assets/css/pages/grid_manager.css": "/assets/css/pages/grid_manager.css",
     "/assets/js/pages/grid_manager.js": "/assets/js/pages/grid_manager.js",
-    "/assets/css/pages/sortable.css": "/assets/css/pages/sortable.css",
-    "/assets/vendors/html5sortable/html.sortable.js": "/assets/vendors/html5sortable/html.sortable.js",
-    "/assets/vendors/nestable-list/jquery.nestable.js": "/assets/vendors/nestable-list/jquery.nestable.js",
-    "/assets/js/pages/ui-nestable.js": "/assets/js/pages/ui-nestable.js",
     "/assets/vendors/sifter/sifter.js": "/assets/vendors/sifter/sifter.js",
     "/assets/vendors/microplugin/microplugin.js": "/assets/vendors/microplugin/microplugin.js",
     "/assets/css/pages/wizard.css": "/assets/css/pages/wizard.css",
     "/assets/js/pages/form_wizard.js": "/assets/js/pages/form_wizard.js",
     "/assets/vendors/bootstrapwizard/jquery.bootstrap.wizard.js": "/assets/vendors/bootstrapwizard/jquery.bootstrap.wizard.js",
-    "/assets/css/pages/accordionformwizard.css": "/assets/css/pages/accordionformwizard.css",
-    "/assets/js/pages/accordionformwizard.js": "/assets/js/pages/accordionformwizard.js",
-    "/assets/vendors/acc-wizard/acc-wizard.min.css": "/assets/vendors/acc-wizard/acc-wizard.min.css",
-    "/assets/vendors/acc-wizard/acc-wizard.min.js": "/assets/vendors/acc-wizard/acc-wizard.min.js",
     "/assets/vendors/selectize/css/selectize.css": "/assets/vendors/selectize/css/selectize.css",
     "/assets/vendors/selectize/css/selectize.bootstrap3.css": "/assets/vendors/selectize/css/selectize.bootstrap3.css",
     "/assets/vendors/selectize/js/selectize.js": "/assets/vendors/selectize/js/selectize.js",
@@ -375,67 +324,6 @@
     "/assets/js/raphael-min.js": "/assets/js/raphael-min.js",
     "/assets/js/holder.js": "/assets/js/holder.js",
     "/assets/js/holder.min.js": "/assets/js/holder.min.js",
-    "/assets/css/frontend/custom.css": "/assets/css/frontend/custom.css",
-    "/assets/js/frontend/josh_frontend.js": "/assets/js/frontend/josh_frontend.js",
-    "/assets/js/frontend/style-switcher.js": "/assets/js/frontend/style-switcher.js",
-    "/assets/css/frontend/tabbular.css": "/assets/css/frontend/tabbular.css",
-    "/assets/css/frontend/jquery.circliful.css": "/assets/css/frontend/jquery.circliful.css",
-    "/assets/js/frontend/carousel.js": "/assets/js/frontend/carousel.js",
-    "/assets/js/frontend/index.js": "/assets/js/frontend/index.js",
-    "/assets/js/frontend/jquery.circliful.js": "/assets/js/frontend/jquery.circliful.js",
-    "/assets/css/frontend/features.css": "/assets/css/frontend/features.css",
-    "/assets/css/frontend/panel.css": "/assets/css/frontend/panel.css",
-    "/assets/js/frontend/advfeatures.js": "/assets/js/frontend/advfeatures.js",
-    "/assets/css/frontend/timeline.css": "/assets/css/frontend/timeline.css",
-    "/assets/vendors/switchery/css/switchery.css": "/assets/vendors/switchery/css/switchery.css",
-    "/assets/vendors/switchery/js/switchery.js": "/assets/vendors/switchery/js/switchery.js",
-    "/assets/vendors/devicon/devicon.min.css": "/assets/vendors/devicon/devicon.min.css",
-    "/assets/vendors/devicon/devicon-colors.css": "/assets/vendors/devicon/devicon-colors.css",
-    "/assets/css/frontend/aboutus.css": "/assets/css/frontend/aboutus.css",
-    "/assets/js/frontend/aboutus.js": "/assets/js/frontend/aboutus.js",
-    "/assets/css/frontend/timeline1.css": "/assets/css/frontend/timeline1.css",
-    "/assets/css/frontend/price.css": "/assets/css/frontend/price.css",
-    "/assets/css/frontend/404.css": "/assets/css/frontend/404.css",
-    "/assets/js/frontend/404.js": "/assets/js/frontend/404.js",
-    "/assets/css/frontend/500.css": "/assets/css/frontend/500.css",
-    "/assets/js/frontend/forgotpwd_custom.js": "/assets/js/frontend/forgotpwd_custom.js",
-    "/assets/js/frontend/login_custom.js": "/assets/js/frontend/login_custom.js",
-    "/assets/js/frontend/register_custom.js": "/assets/js/frontend/register_custom.js",
-    "/assets/css/frontend/faq.css": "/assets/css/frontend/faq.css",
-    "/assets/js/frontend/faq.js": "/assets/js/frontend/faq.js",
-    "/assets/vendors/mixitup/jquery.mixitup.js": "/assets/vendors/mixitup/jquery.mixitup.js",
-    "/assets/css/frontend/register.css": "/assets/css/frontend/register.css",
-    "/assets/js/jquery.min.js": "/assets/js/jquery.min.js",
-    "/assets/css/frontend/login.css": "/assets/css/frontend/login.css",
-    "/assets/js/frontend/jquery.min.js": "/assets/js/frontend/jquery.min.js",
-    "/assets/js/frontend/bootstrap.min.js": "/assets/js/frontend/bootstrap.min.js",
-    "/assets/css/frontend/forgot.css": "/assets/css/frontend/forgot.css",
-    "/assets/css/frontend/shopping.css": "/assets/css/frontend/shopping.css",
-    "/assets/vendors/bootstrap-rating/bootstrap-rating.js": "/assets/vendors/bootstrap-rating/bootstrap-rating.js",
-    "/assets/vendors/bootstrap-rating/bootstrap-rating.css": "/assets/vendors/bootstrap-rating/bootstrap-rating.css",
-    "/assets/css/frontend/cart.css": "/assets/css/frontend/cart.css",
-    "/assets/js/frontend/cart.js": "/assets/js/frontend/cart.js",
-    "/assets/js/frontend/elevatezoom.js": "/assets/js/frontend/elevatezoom.js",
-    "/assets/css/pages/pickers.css": "/assets/css/pages/pickers.css",
-    "/assets/css/frontend/portfolio.css": "/assets/css/frontend/portfolio.css",
-    "/assets/js/frontend/portfolio.js": "/assets/js/frontend/portfolio.js",
-    "/assets/css/frontend/news.css": "/assets/css/frontend/news.css",
-    "/assets/css/frontend/blog.css": "/assets/css/frontend/blog.css",
-    "/assets/css/frontend/contact.css": "/assets/css/frontend/contact.css",
-    "/assets/js/frontend/gmap.js": "/assets/js/frontend/gmap.js",
-    "/assets/css/frontend/user_account.css": "/assets/css/frontend/user_account.css",
-    "/assets/js/frontend/user_account.js": "/assets/js/frontend/user_account.js",
-    "/assets/vendors/jtable/js/jquery.jtable.js": "/assets/vendors/jtable/js/jquery.jtable.js",
-    "/assets/vendors/jtable/themes/metro/blue/jtable.css": "/assets/vendors/jtable/themes/metro/blue/jtable.css",
-    "/assets/vendors/jtable/themes/metro/edit.png": "/assets/vendors/jtable/themes/metro/edit.png",
-    "/assets/vendors/jtable/themes/metro/delete.png": "/assets/vendors/jtable/themes/metro/delete.png",
-    "/assets/vendors/jtable/themes/metro/add.png": "/assets/vendors/jtable/themes/metro/add.png",
-    "/assets/vendors/jtable/themes/metro/column-asc.png": "/assets/vendors/jtable/themes/metro/column-asc.png",
-    "/assets/vendors/jtable/themes/metro/column-desc.png": "/assets/vendors/jtable/themes/metro/column-desc.png",
-    "/assets/vendors/jtable/themes/metro/column-sortable.png": "/assets/vendors/jtable/themes/metro/column-sortable.png",
-    "/assets/vendors/jtable/themes/metro/blue/loading.gif": "/assets/vendors/jtable/themes/metro/blue/loading.gif",
-    "/assets/css/pages/jtable.css": "/assets/css/pages/jtable.css",
-    "/assets/css/pages/jtablemetroblue_jquery-ui.css": "/assets/css/pages/jtablemetroblue_jquery-ui.css",
     "/assets/vendors/wow/js/wow.min.js": "/assets/vendors/wow/js/wow.min.js",
     "/assets/css/pages/log_viewer.css": "/assets/css/pages/log_viewer.css",
     "/assets/css/pages/dashboard2.css": "/assets/css/pages/dashboard2.css",
@@ -445,7 +333,5 @@
     "/assets/css/style.css": "/assets/css/style.css",
     "/assets/css/app.css": "/assets/css/app.css",
     "/assets/css/app_white.css": "/assets/css/app_white.css",
-    "/assets/css/lib.css": "/assets/css/lib.css",
-    "/assets/js/app.js": "/assets/js/app.js",
-    "/assets/js/frontend/lib.js": "/assets/js/frontend/lib.js"
+    "/assets/js/app.js": "/assets/js/app.js"
 }
