--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,7 @@ resources/assets/vendors/
 resources/views/vendor/
 resources/lang/vendor/
 .phpstorm.meta.php
-public/
+public/assets/js/vendor/
+public/assets/js/App.js
+mix-manifest.json
+yarn.lock
