--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "cross-env": "^5.1",
-    "laravel-mix": "^1.0"
+    "laravel-mix": "^1.0",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
     "axios": "^0.17",
