--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "sofa/eloquence": "^5.5",
     "spatie/laravel-activitylog": "^2.1",
     "spatie/laravel-analytics": "^3.3",
+    "xc-php/independent-kit": "^1.0",
     "yajra/laravel-datatables-oracle": "~8.0"
   },
   "require-dev": {
