--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "laravel/framework": "5.5.*",
     "laravel/tinker": "~1.0",
     "laravelcollective/html": "^5.5",
+    "php-curl-class/php-curl-class": "^8.1",
     "sofa/eloquence": "^5.5",
     "spatie/laravel-activitylog": "^2.1",
     "spatie/laravel-analytics": "^3.3",
