支付寶轉銀行卡  [3rdpay/HenPay-Issues#89] (#79)
* 金流串接-API通道增加支付寶轉銀行卡 (A2)  [3rdpay/HenPay-Issues#89]

* 修改namespace  [3rdpay/HenPay-Issues#89]

* 程式修正 [3rdpay/HenPay-Issues#89]

* 增加掃碼畫面入口&資訊  [3rdpay/HenPay-Issues#89]

* resource更新 view路徑設定

* 元件調整

* 修正掃碼頁面資訊  [3rdpay/HenPay-Issues#89]

* 新增qrcode元件，api新增參數，前端完成

* 新增rwd參數，新增螢幕截圖功能，修正qrcode空白問題，修正打開淘寶掃一掃路徑錯誤問題

* 下載方法版本2

* 下載方法版本3

* 移除自動截屏，新增提示字

* 前端文字更新

* 修正程式錯誤  [3rdpay/HenPay-Issues#89]

* code fix

* bug fix

* 一但過期，畫面重整

* 樣式微調，換套件

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.0",
     "axios": "^0.17",
     "jquery": "^3.2",
     "lodash": "^4.17.4",
