--- a/.env.dusk.testing
+++ b/.env.dusk.testing
@@ -37,6 +37,8 @@ REDIRECT_HTTPS=true
 JPUSH_KEY=
 JPUSH_SECRET=
 THIRD_PARTY_PAY_API_URL=
+ALI_PAY_PID=
+ALI_PAY_APP_ACCOUNT_ID=
 
 MANAGE_ORDER_LISTENER_SEARCH_TIME=10
 
