--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "type": "project",
   "require": {
     "php": ">=7.1.0",
+    "3rdpay/xc-alipay": "^1.0",
     "cartalyst/sentinel": "^2.0",
     "cviebrock/eloquent-sluggable": "^4.2",
     "cviebrock/eloquent-taggable": "^3.2",
@@ -32,6 +33,12 @@
     "mockery/mockery": "0.9.*",
     "phpunit/phpunit": "~6.0"
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "git@github.com:3rdpay/xc-alipay.git"
+    }
+  ],
   "autoload": {
     "classmap": [
       "database/seeds",
