--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.2",
     "lodash": "^4.17.4",
     "moment": "^2.22.2",
+    "qrcode-reader": "^1.0.4",
     "qs": "^6.5.2",
     "vue": "^2.5.7",
     "vue-bus": "^1.2.0",
